# argusx

./: .gitignore  .pre-commit-config.yaml.bak  AGENTS.md  Cargo.toml  deny.toml  opencode-planning-prompts.md
agent/: Cargo.toml
agent-center/: Cargo.toml
agent-center/src/: dispatch.rs  error.rs  lib.rs
agent-center/tests/: atomic_spawn_test.rs  close_force_test.rs  close_idempotency_test.rs  compile_smoke.rs  concurrent_spawn_test.rs  config_loader_test.rs  e2e_flow_test.rs  guard_reservation_test.rs  integration_tool_wiring_test.rs  lifecycle_state_machine_test.rs  reconcile_test.rs  spawn_flow_test.rs  spawn_idempotent_quota_test.rs  sqlite_store_test.rs  wait_semantics_test.rs
agent-cli/: Cargo.toml  README.md
agent-cli/src/: app.rs  cli.rs  event_loop.rs  lib.rs  main.rs  runtime.rs  session.rs  skills.rs  ui.rs
agent-cli/tests/: cli_help.rs  multi_turn_integration.rs  session_policy_integration.rs
agent-session/: Cargo.toml
agent-session-cli/: Cargo.toml
agent-session-cli/src/: main.rs  mock.rs
agent-session-cli/tests/: cli_create_list.rs  cli_help.rs
agent-session/src/: lib.rs  session_runtime.rs  sqlite_store.rs  storage.rs
agent-session/tests/: integration.rs  sqlite_runtime_integration_test.rs  sqlite_store_ordering_test.rs
agent-tool/: Cargo.toml
agent-tool/src/: lib.rs  registry.rs  runtime.rs  trait_def.rs
agent-tool/tests/: domain_cookies_tool_test.rs  fs_guard_test.rs  fs_guard_type_test.rs  glob_tool_test.rs  grep_tool_test.rs  integration_test.rs  read_tool_test.rs  runtime_adapter_test.rs  update_plan_tool_test.rs
agent/src/: agent.rs  builder.rs  config.rs  error.rs  lib.rs  prompts.rs  resolver.rs  store.rs  types.rs
agent/tests/: execution_resolver_test.rs  facade_api_test.rs  profile_store_test.rs  runtime_tool_wiring_test.rs
cookie-gateway/: Cargo.toml
cookie-gateway/chrome-extension/: background.js  build-extension.sh  manifest.json  popup.html
cookie-gateway/gateway/: package-lock.json  server.js
cookie-gateway/src/: command_bus.rs  config.rs  error.rs  gateway.rs  lib.rs  proxy.rs  store.rs  tool.rs
cookie-gateway/tests/: gateway_test.rs  proxy_test.rs  store_test.rs  tool_test.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: builtin_tool_shape_test.rs  contract_state_machine_test.rs  finish_reason_shape_test.rs  mcp_shape_test.rs  response_event_shapes_test.rs  response_stream_test.rs
desktop/src-tauri/: Cargo.toml  tauri-config.test.ts  tauri.conf.json
llm-client/: Cargo.toml
llm-client/src/: adapter.rs  client.rs  config.rs  error.rs  lib.rs  retry.rs  sse.rs  types.rs
llm-client/tests/: anthropic_adapter_test.rs  client_builder_bigmodel_test.rs  client_registry_test.rs  integration_test.rs  openai_adapter_test.rs  sse_eventsource_test.rs  types_roundtrip_test.rs
llm-gateway/: Cargo.toml
llm-gateway/src/: lib.rs  main.rs
llm-provider/: Cargo.toml
llm-provider/src/: anthropic.rs  bigmodel.rs  lib.rs  openai_compat.rs
llm-provider/tests/: anthropic_adapter_test.rs  bigmodel_adapter_test.rs  bigmodel_api_config_test.rs  bigmodel_api_models_test.rs  openai_compat_adapter_test.rs
provider/: Cargo.toml  README.md
provider-openai/: Cargo.toml  README.md
provider-openai/src/: chunk.rs  lib.rs  mapper.rs  parser.rs
provider-openai/tests/: chunk_parse_test.rs  compile_smoke_test.rs  event_mapper_test.rs  fixture_replay_test.rs  request_schema_test.rs  response_schema_test.rs  stream_event_parser_test.rs  terminal_contract_test.rs
provider/src/: client.rs  error.rs  lib.rs  record.rs  replay.rs  request.rs
provider/tests/: builtin_tool_upgrade_test.rs  compile_smoke_test.rs  openai_chunk_parse_test.rs  openai_compat_replay_test.rs  openai_mapper_behavior_test.rs  openai_mapper_test.rs  openai_mcp_upgrade_test.rs  openai_request_schema_test.rs  openai_response_schema_test.rs  openai_stream_client_test.rs  openai_stream_event_parser_test.rs  provider_cli_runtime_test.rs  provider_client_smoke_test.rs  provider_config_test.rs  provider_dev_config_test.rs  provider_record_replay_roundtrip_test.rs  provider_replay_mode_test.rs  provider_stream_failure_test.rs  provider_telemetry_test.rs  provider_tracing_test.rs  record_source_test.rs  replay_source_test.rs  sse_transport_test.rs  terminal_contract_test.rs  tool_normalize_test.rs  zai_fixture_replay_test.rs  zai_mapper_test.rs  zai_parser_test.rs  zai_stream_client_test.rs
runtime/: Cargo.toml
runtime/src/: bootstrap.rs  config.rs  lib.rs  logging.rs  paths.rs  tests.rs
runtime/tests/: config_bootstrap_test.rs  runtime_build_test.rs  runtime_degraded_telemetry_test.rs
session/: Cargo.toml
session/src/: database.rs  error.rs  lib.rs  manager.rs  session.rs  store.rs  tests.rs  thread.rs  types.rs
session/tests/: agent_thread_binding_test.rs  session_container_flow.rs  session_manager_flow.rs  session_manager_regression_test.rs  session_resume_test.rs  thread_background_flow_test.rs  transcript_persistence_test.rs
telemetry/: Cargo.toml
telemetry/src/: batch.rs  config.rs  error.rs  layer.rs  lib.rs  runtime.rs  schema.rs  sensitive.rs  writer.rs
telemetry/tests/: batch_queue_test.rs  clickhouse_writer_test.rs  compile_smoke_test.rs  config_parse_test.rs  layer_event_mapping_test.rs  probe_clickhouse_test.rs  runtime_integration_test.rs  runtime_layer_test.rs  schema_contract_test.rs  sensitive_filter_test.rs
tests/agent-session-cli/: Cargo.toml
tool/: Cargo.toml
tool/src/: catalog.rs  config.rs  context.rs  error.rs  lib.rs  scheduler.rs  spec.rs  trait_def.rs
tool/tests/: browser_tool_test.rs  compile_smoke_test.rs  config_test.rs  domain_cookies_tool_test.rs  fs_guard_test.rs  fs_guard_type_test.rs  git_guard_test.rs  git_tool_history_test.rs  git_tool_schema_test.rs  git_tool_state_test.rs  git_tool_write_test.rs  glob_tool_test.rs  grep_tool_test.rs  mcp_stdio_test.rs  read_tool_test.rs  runtime_integration_test.rs  scheduler_concurrency_test.rs  telemetry_scheduler_test.rs  tool_context_shape_test.rs  update_plan_tool_test.rs
turn/: Cargo.toml
turn/src/: command.rs  context.rs  driver.rs  error.rs  event.rs  (+12 more)
(+643 files in other folders)
