[workspace]
members = ["agent", "core", "desktop/src-tauri", "provider", "runtime", "session", "tool", "turn", "telemetry", "vendor/eventsource_stream"]
resolver = "2"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "rt"] }
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utils
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1"
pin-project-lite = "0.2.8"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tempfile = "3"
comfy-table = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", default-features = false }
tokio-stream = "0.1"
rand = "0.8"
httpdate = "1.0"
wiremock = "0.6"
regex = "1"
