[package]
name = "agent-session-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
agent-session = { path = "../agent-session" }
agent-turn = { path = "../agent-turn" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
