[package]
name = "agent-session"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
agent-turn = { path = "../agent-turn" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }
