[package]
name = "agent-session"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
agent-turn = { path = "../agent-turn" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
