[package]
name = "agent-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
globset = "0.4"
grep = "0.2"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "fs", "process"] }
tracing = "0.1"
reqwest = { workspace = true }
walkdir = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "rt-multi-thread", "macros", "net"] }
axum = "0.8"
tempfile = "3.0"
