[package]
name = "agent-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "fs", "process"] }
tracing = "0.1"
reqwest = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "rt-multi-thread", "macros", "net"] }
axum = "0.8"
