[package]
name = "agent-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = { workspace = true }
globset = "0.4"
grep = "0.2"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "process"] }
tracing = { workspace = true }
reqwest = { workspace = true }
walkdir = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "net"] }
axum = "0.8"
tempfile = { workspace = true }
