[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-center = { path = "../agent-center" }
agent-core = { path = "../agent-core" }
agent-session = { path = "../agent-session" }
agent-tool = { path = "../agent-tool" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
