[package]
name = "cookie-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
tracing = "0.1"
axum = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
http-body-util = "0.1"
