[package]
name = "cookie-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-tls = "0.6"
http-body-util = "0.1"
futures-util = "0.3"
url = "2.5"
tower = "0.5"
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tower = "0.5"
