[package]
name = "llm-client"
version = "0.1.0"
edition = "2021"
description = "Robust LLM HTTP client with retry and SSE support"

[dependencies]
reqwest.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
eventsource_stream = { package = "eventsource-stream", path = "../vendor/eventsource_stream" }
pin-project-lite = "0.2"

# For retry jitter
rand = "0.8"
httpdate = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
wiremock = "0.6"
