[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.8", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
llm-client = { path = "../llm-client" }
bigmodel-api = { path = "../bigmodel-api" }

[dev-dependencies]
wiremock = "0.6"
tower = "0.5"
http-body-util = "0.1"
