[package]
name = "llm-provider"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provider adapters for llm-client"

[dependencies]
llm-client = { path = "../llm-client" }
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
rand = { workspace = true }
httpdate = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
wiremock = { workspace = true }
futures = { workspace = true }
