[package]
name = "provider-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
argus_core = { package = "core", path = "../core" }

[[test]]
name = "fixture_replay_test"
harness = true
