[package]
name = "provider"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
eventsource_stream = { package = "eventsource-stream", path = "../vendor/eventsource_stream" }
argus_core = { package = "core", path = "../core" }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
wiremock = { workspace = true }
