[package]
name = "provider"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "fs", "time", "io-util"] }
eventsource_stream = { package = "eventsource-stream", path = "../vendor/eventsource_stream" }
argus_core = { package = "core", path = "../core" }
rpassword = "7"

[[bin]]
name = "provider_cli"
path = "src/bin/provider_cli.rs"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "test-util"] }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }
