[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
session = { path = "../session" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
telemetry = { path = "../telemetry" }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
