[package]
name = "session"
version = "0.1.0"
edition = "2024"
description = "Session management for ArgusX"

[dependencies]
argus_core = { package = "core", path = "../core" }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
turn = { path = "../turn" }

[dev-dependencies]
async-trait = { workspace = true }
tool = { path = "../tool" }
tokio = { workspace = true, features = ["test-util", "macros"] }
