[package]
name = "tool"
version = "0.1.0"
edition = "2024"

[dependencies]
argus_core = { package = "core", path = "../core" }
async-trait = { workspace = true }
futures = { workspace = true }
git2 = "0.19"
globset = "0.4"
grep = "0.2"
ignore = "0.4"
regex = "1.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "process", "io-util"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
walkdir = "2.0"
chromiumoxide = "0.9.1"
rusqlite = { workspace = true }
base64 = "0.22"
clap = { workspace = true }

[dev-dependencies]
axum = "0.8"
tempfile = { workspace = true }
telemetry = { path = "../telemetry" }
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "net"] }
tracing-subscriber = { workspace = true }
