[package]
name = "turn"
version = "0.1.0"
edition = "2024"

[dependencies]
argus_core = { package = "core", path = "../core" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tokio-util = { workspace = true }
tool = { path = "../tool" }
