[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argus_core = { package = "core", path = "../../core" }
async-trait = { workspace = true }
provider = { path = "../../provider" }
serde = { workspace = true }
serde_json = { workspace = true }
telemetry = { path = "../../telemetry" }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tool = { path = "../../tool" }
turn = { path = "../../turn" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { workspace = true }
