[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argus_core = { package = "core", path = "../../core" }
session = { path = "../../session" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
telemetry = { path = "../../telemetry" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
turn = { path = "../../turn" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
