[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aead = { package = "aes-gcm", version = "0.10.3" }
agent = { path = "../../agent" }
argus_core = { package = "core", path = "../../core" }
async-trait = { workspace = true }
chrono = { workspace = true }
directories = "6.0.0"
futures = { workspace = true }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
provider = { path = "../../provider" }
reqwest = { workspace = true }
runtime = { path = "../../runtime" }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
session = { path = "../../session" }
telemetry = { path = "../../telemetry" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tool = { path = "../../tool" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
turn = { path = "../../turn" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
